tests/syntax/good/instr_while1.c

void f () {

while (1) f();

}

