tests/syntax/bad/instr_return_fail1.c

void f() {

return a,b,c;

}

